fixed spacing and sizing on listing in detail pages

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -144,6 +144,9 @@ body {
       margin-right: 0px;
       width: 100%;
     }
+    #detailDescription {
+      hyphens: auto;
+    }
     #detailImage {
       width: 100%;
       height: 400px;
@@ -166,10 +169,19 @@ body {
     }
     width: 30%;
     margin-left: 15px;
-    .detailImage {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
+    .detailCard {
+      margin-bottom: 15px;
+      .detailImage {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+      }
+      .detailLink {
+        font-size: 10px;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        hyphens: auto;
+      }
     }
   }
 }
